packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/link_loop.syx
<?xml version='1.0' encoding='ASCII'?>
<flow xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" cls="Flow" height="50.0" id="" is_locked="False" uuid="{77aa1bfb-1936-4ccc-92b9-a420e45bc5ed}" width="50.0" x="0.0" y="0.0">
  <label></label>
  <description></description>
  <author></author>
  <copyright></copyright>
  <version></version>
  <min_version></min_version>
  <aggregation type="json">null</aggregation>
  <libraries type="json">[]</libraries>
  <pythonpaths type="json">[]</pythonpaths>
  <overrides type="json">{}</overrides>
  <parameters type="json">{}</parameters>
  <ports/>
  <flow cls="Flow" height="50.0" id="" is_locked="False" source_uuid="{77aa1bfb-1936-4ccc-92b9-a420e45bc5ed}" uuid="{4daf4ebd-648c-4f83-bb79-3e3cb53d7960}" width="50.0" x="1661.0" y="2001.0" href="link_loop.syx">
    <label></label>
    <overrides type="json">{}</overrides>
    <environment type="json">{}</environment>
    <ports/>
  </flow>
</flow>
